# BUILD
# =====
[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mine-probs"
version = "0.1.0"
description = "Minesweeper probabilities displayed for a board situation created in a GUI"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["minesweeper", "probability", "GUI", "PyQt5"]
authors = [
    {name = "Lewis Gaul", email = "lewis.gaul@gmail.com"},
]
maintainers = [
    {name = "Lewis Gaul", email = "lewis.gaul@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "PyQt5<5.15",
    "zig_minesolver==0.1.1",
]

[project.urls]
repository = "https://github.com/LewisGaul/mine-probs"


# TOOLS
# =====

# BLACK
# -----
[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git/
    | .*venv.*/
    | __pycache__/
  )
)
'''


# ISORT
# -----
[tool.isort]
# Make compatible with Black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
# Other options
order_by_type = true
lines_after_imports = 2
skip = ""
skip_glob = "*venv*"


# PYTEST
# ------
[tool.pytest.ini_options]
testpaths = "tests/"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
python_files = "*test.py"
python_classes = "*Tests, *Test"
python_functions = "test_*"
